--- a/main.ejs
+++ b/main.ejs
@@ -1,4 +1,4 @@
-<div class="ROCOGazette">
+<div class="ROCOGazette OLSKDecorModule">
 
 <h2 class="ROCOGazetteHeading"><%= OLSKLocalized('ROCOGazetteHeadingText') %></h2>
 
